--- a/views/index.twig
+++ b/views/index.twig
@@ -12,7 +12,7 @@
         <div class="row">
             <h1 class="lead">{{ title }}</h1>
             <p class="tagline">{{ subtitle }}</p>
-            <p><a class="btn btn-default btn-lg" role="button">MORE INFO</a> <a class="btn btn-action btn-lg" role="button" href="{{ urlFor('Downloads') }}">DOWNLOAD NOW</a></p>
+            <p><a class="btn btn-default btn-lg" role="button" href="{{ urlFor('About') }}">MORE INFO</a> <a class="btn btn-action btn-lg" role="button" href="{{ urlFor('Downloads') }}">DOWNLOAD NOW</a></p>
         </div>
     </div>
 </header>
