--- a/views/index.twig
+++ b/views/index.twig
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 highlight">
-                    <div class="h-caption"><h4><i class="fa fa-flash fa-5"></i>The Minimalism of a Microframework</h4></div>
+                    <div class="h-caption"><h4><i class="fa fa-flash fa-5"></i>The Performance of a Microframework</h4></div>
                     <div class="h-body text-center">
                         <p>xPDO was built many years ago as an ultra-lightweight alternative to <a href="http://propelorm.org/">Propel</a>. This architectural mindset continues to drive development of xPDO and makes it ideally suited for use with microframeworks such as <a href="http://www.slimframework.com/">Slim</a>.</p>
                     </div>
